# ai_maker

./: .gitignore  Makefile  README.md  pyproject.toml
app/: gpt_developer.ipynb
app/examples/: hello_world.ipynb
